Finished DomoMaker E Part 2 is a password change window

--- a/views/app.handlebars
+++ b/views/app.handlebars
@@ -7,7 +7,9 @@
 </head>
 <body>
   <nav><a href="/login"><img id="logo" src="/assets/img/face.png" alt="face logo"/></a>
-    <div class="navlink"><a href="/logout">Log out</a></div>
+    <div class="navlink"><a id="logoutButton" href="/logout">Log Out</a></div>
+    <div class="navlink"><a id="domosButton" href="/maker">Domos</a></div>
+    <div class="navlink"><a id="changePasswordButton" href="/changePassword">Change Password</a></div>
   </nav>
 
   <section id="app">
